--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,8 @@
-html{
-    font-family: 'Poppins', sans-serif;
+html {
+	font-family: 'Poppins', sans-serif;
+}
+
+.img img {
+	height: 250px;
+	object-fit: cover;
 }
